removed overflow-x hidden on body which fixed ie9 issues

--- a/_/css/application.css
+++ b/_/css/application.css
@@ -210,7 +210,6 @@ html {
 body {
   font-size: 100%;
   position: absolute;
-  overflow-x: hidden;
   width: 100%;
   height: 100%; }
   /* line 63, ../sass/foundation/_helpers.scss */
