--- a/_/sass/foundation/_base.scss
+++ b/_/sass/foundation/_base.scss
@@ -42,7 +42,7 @@ html {
 body {
     font-size: 100%;
     position: absolute;
-    overflow-x: hidden;
+    //overflow-x: hidden;
     width: 100%;
     height: 100%;
     @include highlight-color($c-canvasBg2);
